Fix text overlapping on printing
- Issue was that the single line divs did not have enough margin to leave room for the bottom banner.

- Added `.single-row` class to apply margin-top to avoid breaks between statements during printing.

--- a/webcaf/webcaf/static/application.css
+++ b/webcaf/webcaf/static/application.css
@@ -228,6 +228,10 @@ span.govuk-header__logotype-text {
         padding-bottom: 10pt;
     }
 
+    .single-row {
+        margin-top: 10pt;
+        margin-bottom: 10pt;
+    }
 
     .bottom-banner, #bottom-banner {
         position: fixed;
